@@ -31,6 +31,8 @@
 function_entry date_functions[] = {
 	PHP_FE(date, NULL)
 	PHP_FE(gmdate, NULL)
+	PHP_FE(mktime, NULL)
+	PHP_FE(gmmktime, NULL)
 	PHP_FE(strtotime, NULL)
 	PHP_FE(date_timezone_set, NULL)
 	PHP_FE(date_timezone_get, NULL)
@@ -397,6 +399,105 @@ PHP_FUNCTION(strtotime)
 	} else {
 		RETURN_LONG(ts);
 	}
+}
+/* }}} */
+
+PHPAPI static void php_mktime(INTERNAL_FUNCTION_PARAMETERS, int gmt)
+{
+	long hou, min, sec, mon, day, yea, dst = -1;;
+	timelib_time *now;
+	timelib_tzinfo *tzi;
+	long ts, adjust_seconds = 0;
+	int error;
+
+	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "|lllllll", &hou, &min, &sec, &mon, &day, &yea, &dst) == FAILURE) {
+		RETURN_FALSE;
+	}
+	/* Initialize structure with current time */
+	now = timelib_time_ctor();
+	if (gmt) {
+		timelib_unixtime2gmt(now, (timelib_sll) time(NULL));
+	} else {
+		tzi = get_timezone_info(TSRMLS_C);
+		timelib_unixtime2local(now, (timelib_sll) time(NULL), tzi);
+	}
+	/* Fill in the new data */
+	switch (ZEND_NUM_ARGS()) {
+		case 7:
+			/* break intentionally missing */
+		case 6:
+			now->y = yea;
+			/* break intentionally missing again */
+		case 5:
+			now->d = day;
+			/* break missing intentionally here too */
+		case 4:
+			now->m = mon;
+			/* and here */
+		case 3:
+			now->s = sec;
+			/* yup, this break isn't here on purpose too */
+		case 2:
+			now->i = min;
+			/* last intentionally missing break */
+		case 1:
+			now->h = hou;
+			break;
+		default:
+			php_error_docref(NULL TSRMLS_CC, E_STRICT, "You should be using the time() function instead.");
+	}
+	/* Update the timestamp */
+	if (gmt) {
+		timelib_update_ts(now, NULL);
+	} else {
+		timelib_update_ts(now, tzi);
+	}
+	/* Support for the deprecated is_dst parameter */
+	if (dst != -1) {
+		php_error_docref(NULL TSRMLS_CC, E_STRICT, "The is_dst parameter is deprecated.");
+		if (gmt) {
+			/* GMT never uses DST */
+			if (dst == 1) {
+				adjust_seconds = -3600;
+			}
+		} else {
+			/* Figure out is_dst for current TS */
+			timelib_time_offset *tmp_offset;
+			tmp_offset = timelib_get_time_zone_info(now->sse, tzi);
+			if (dst == 1 && tmp_offset->is_dst == 0) {
+				adjust_seconds = -3600;
+			}
+			if (dst == 0 && tmp_offset->is_dst == 1) {
+				adjust_seconds = +3600;
+			}
+		}
+	}
+	/* Clean up and return */
+	ts = timelib_date_to_int(now, &error);
+	ts += adjust_seconds;
+
+	timelib_time_dtor(now);
+
+	if (error) {
+		RETURN_FALSE;
+	} else {
+		RETURN_LONG(ts);
+	}
+}
+
+/* {{{ proto int mktime(int hour, int min, int sec, int mon, int day, int year)
+   Get UNIX timestamp for a date */
+PHP_FUNCTION(mktime)
+{
+	php_mktime(INTERNAL_FUNCTION_PARAM_PASSTHRU, 0);
+}
+/* }}} */
+
+/* {{{ proto int gmmktime(int hour, int min, int sec, int mon, int day, int year)
+   Get UNIX timestamp for a GMT date */
+PHP_FUNCTION(gmmktime)
+{
+	php_mktime(INTERNAL_FUNCTION_PARAM_PASSTHRU, 1);
 }
 /* }}} */
 
